--- a/style.css
+++ b/style.css
@@ -10,8 +10,14 @@ header {
   background-color: #111;
   padding: 15px 30px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
+}
+
+.logo-text-header {
+  font-size: 1.8em;
+  font-weight: bold;
+  color: #d8175f;
 }
 
 /* BOTÓN DE MENÚ */
