--- a/style.css
+++ b/style.css
@@ -334,3 +334,12 @@ header a button:hover {
   width: 100%;
   border-radius: 10px;
 }
+
+/* EFECTO DE ELEVACIÓN EN TARJETAS DE EPISODIO */
+.episode {
+  transition: transform 0.3s ease;
+}
+
+.episode:hover {
+  transform: translateY(-5px);
+}
